--- a/game.html
+++ b/game.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/reset.css">
-  <link rel="stylesheet" href="/game.css">
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="game.css">
 
-  <script defer src="/game.js"></script>
+  <script defer src="game.js"></script>
 
   <title>Jogo Da Memoria</title>
 </head>
