--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/login.css">
-    <script defer src="/login.js"></script>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="login.css">
+    <script defer src="login.js"></script>
     <title>jogo da memoria</title>
 </head>
 
 <body>
     <form class="login__form">
         <div class="login__header"></div>
-        <img class="login-img" src="/images/brain.png" alt="brain icon">
+        <img class="login-img" src="images/brain.png" alt="brain icon">
         <h1 class="login_h1">Jogo Da Memoria</h1>
         <input type="text" placeholder="Name" class="login__input">
         <button type="submit" class="login__button" disabled>play</button>
